[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://scripts/character/tabs/TabNavigation.gd" id="1_0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.12, 0.1, 0.08, 1)
border_width_left = 3
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color(0.85, 0.7, 0.4, 0.3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.18, 0.15, 0.12, 1)
border_width_left = 3
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color(0.85, 0.7, 0.4, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
bg_color = Color(0.22, 0.18, 0.14, 1)
border_width_left = 3
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color(0.85, 0.7, 0.4, 0.8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4"]
bg_color = Color(0.08, 0.06, 0.05, 1)
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color(0.5, 0.5, 0.5, 0.2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5"]
bg_color = Color(0.25, 0.2, 0.15, 1)
border_width_left = 4
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color(0.95, 0.85, 0.6, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1"]

[node name="TabNavigation" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0")

[node name="TabContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="RaceButton" type="Button" parent="TabContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 90)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_styles/disabled = SubResource("StyleBoxFlat_4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1")
theme_override_font_sizes/font_size = 32
text = "1  RACE"
horizontal_alignment = 0
clip_contents = true

[node name="ClassButton" type="Button" parent="TabContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 90)
disabled = true
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_styles/disabled = SubResource("StyleBoxFlat_4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1")
theme_override_font_sizes/font_size = 32
text = "2  CLASS"
horizontal_alignment = 0
clip_contents = true

[node name="BackgroundButton" type="Button" parent="TabContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 90)
disabled = true
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_styles/disabled = SubResource("StyleBoxFlat_4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1")
theme_override_font_sizes/font_size = 32
text = "3  BACKGROUND"
horizontal_alignment = 0
clip_contents = true

[node name="AbilityButton" type="Button" parent="TabContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 90)
disabled = true
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_styles/disabled = SubResource("StyleBoxFlat_4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1")
theme_override_font_sizes/font_size = 32
text = "4  ABILITY SCORES"
horizontal_alignment = 0
clip_contents = true

[node name="AppearanceButton" type="Button" parent="TabContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 90)
disabled = true
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_styles/disabled = SubResource("StyleBoxFlat_4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1")
theme_override_font_sizes/font_size = 32
text = "5  APPEARANCE"
horizontal_alignment = 0
clip_contents = true

[node name="ConfirmButton" type="Button" parent="TabContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 90)
disabled = true
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_styles/disabled = SubResource("StyleBoxFlat_4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1")
theme_override_font_sizes/font_size = 32
text = "6  NAME & CONFIRM"
horizontal_alignment = 0
clip_contents = true
